--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 supabase==2.0.3
-openai==1.3.7
+google-generativeai==0.8.5
 pydantic==1.10.13          
 python-multipart==0.0.6
 python-dotenv==1.0.0
